/**
 * Dog type enum
 * There are three different dog type
 */
public enum DogType {
    HUNTING,
    ASSISTANCE,
    RACING
}
